crates/language-v2/tests/src/fail/p0_parsing/missing_field/test.stderr
error: Expected field: 'title'.
  --> src/fail/p0_parsing/missing_field/test.rs:11:9
   |
11 |         topics = []
   |         ^^^^^^
